...
              .frame(width: 36, height: 36)
              .cornerRadius(36)
              .onTapGesture {
                signOutScreenIsPresented = true
                UIApplication.shared.endEditing()
              }
              .accessibilityIdentifier("profilePhotoButton")
          }
          
          ZStack(alignment: .topLeading) {
            Text(tweetText.isEmpty ? placeholder : tweetText)
              .padding(.leading, leftOffset)
              .padding(.vertical, verticalPadding)
...
						if #available(iOS 16.0, *) {
							TextEditor(text: Binding($twitterClient.draft.text, replacingNilWith: ""))
								.foregroundColor(Color(.label))
								.multilineTextAlignment(.leading)
								.keyboardType(.twitter)
								.padding(.top, (verticalPadding / 3) * -1)
								.accessibilityIdentifier("tweetComposer")
								.scrollContentBackground(.hidden)
						} else {
							TextEditor(text: Binding($twitterClient.draft.text, replacingNilWith: ""))
								.foregroundColor(Color(.label))
								.multilineTextAlignment(.leading)
								.keyboardType(.twitter)
...
