...
              ActionBarView(replying: $replying)
            } else {
              Button(action: { Task { await twitterClient.signIn() } }) {
                Label("Sign In With Twitter", image: "twitter.fill")
                  .font(.broadcastHeadline)
              }
              .accessibilityIdentifier("loginButton")
            }
          }
          .buttonStyle(BroadcastButtonStyle(isLoading: twitterClient.state != .idle))
          .padding()
          .background(VisualEffectView(effect: UIBlurEffect(style: .regular)).ignoresSafeArea())
          .gesture(DragGesture().onEnded({ _ in UIApplication.shared.endEditing() }))
...
